--- a/src/components/shorten/style.scss
+++ b/src/components/shorten/style.scss
@@ -32,64 +32,17 @@
       outline: none;
       border: 1px solid #ddd;
       box-sizing: border-box;
-      box-shadow: 0 0 5px 2px #888888;
+      box-shadow: inset 0px 2px 4px 1px #888888;
       font-size: 16px;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
-      transition: all 0.7s ease;
+      transition: all 1s ease;
       &.error {
         border: 1px solid red;
       }
 
       &.success {
         border-radius: 30px;
-      }
-    }
-
-    .submit-btn {
-      box-sizing: border-box;
-      width: 100%;
-      background: #285fe2;
-      font-weight: bold;
-      padding: 12px;
-      border-radius: 30px;
-      border: none;
-      outline: none;
-      margin: auto;
-      font-size: 16px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-      text-align: center;
-      margin-top: 0;
-      transition: 0.5s all ease-in;
-
-      .text {
-        color: #fff;
-      }
-
-      &.hide {
-        margin-top: 10px;
-        border-radius: 30px;
-        height: 40px;
-        overflow: hidden;
-        padding: 0;
-        position: relative;
-
-        .text {
-          display: none;
-        }
-
-        &:before {
-          content: "";
-          position: absolute;
-          top: 18px;
-          left: 12%;
-          right: 12%;
-          width: 76%;
-          height: 5px;
-          border-radius: 30%;
-          background: #0a1836;
-        }
       }
     }
 
@@ -109,68 +62,151 @@
         height: 100%;
       }
     }
-  }
-  .result-container {
-    width: 58%;
-    margin: auto;
-    background: #fff;
-    height: 0;
-    overflow: hidden;
-    // transition-delay: .9s;
-    // transition: height .6s ease;
 
-    &.show {
-      animation-delay: 0.9s;
-      animation: reveal 1s ease;
-      border-top: 2px dashed #6977bd;
-      border-bottom: 2px dashed #dcdcdc;
-      transition-delay: 0.9s;
-      height: 230px;
-      margin-top: -20px;
-      z-index: 5;
-      position: relative;
-    }
-
-    .long-url {
-      padding: 20px;
-      background: #ddd;
-
-      .value {
-        overflow-wrap: break-word;
-        color: rgb(126, 126, 126);
-      }
-    }
-
-    .result {
-      min-height: 100px;
+    .anime-container {
       width: 100%;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
+      height: max-content;
+      min-height: 300px;
+      overflow: hidden;
+      position: relative;
+      transition: all .3s ease;
 
-      .copy-btn {
-        padding: 8px;
-        background: #ddd;
-        border-radius: 6px;
-        width: 80px;
+      &.show {
         margin-top: 10px;
+      }
+
+      .submit-btn {
+        position: relative;
+        cursor: pointer;
+
+        &:before,
+        &:after {
+          content: "";
+          position: absolute;
+          top: 0;
+          width: 100%;
+          height: 25px;
+          z-index: 1;
+          background-color: #1e4bb5;
+          -webkit-transition: all 0.4s ease;
+          transition: all 0.4s ease;
+        }
+        &:after {
+          margin-top: 25px;
+          z-index: -1;
+          left: 0;
+          border-radius: 0px 0px 40px 40px;
+        }
+
+        .text {
+          color: #fff;
+          color: #fff;
+          position: relative;
+          z-index: 6;
+          display: inline-flex;
+          width: 100%;
+          justify-content: center;
+        }
+
+        &.hide {
+          &:before{
+            z-index: 5;
+            background-color: #0f1a35;
+            border-radius: 40px 40px 0px 0px;
+            -webkit-box-shadow: inset 0px 23px 0px #1e4bb5;
+            box-shadow: inset 0px 23px 0px #1e4bb5;
+          }
+          &:after{
+            background-color: #0f1a35;
+            -webkit-box-shadow: inset 0px -23px 0px #1e4bb5;
+            box-shadow: inset 0px -23px 0px #1e4bb5;
+          }
+
+          .text {
+            display: none;
+          }
+        }
+      }
+
+      .result-container {
+        width: 58%;
+        margin: auto;
+        background: #fff;
+        height: 0;
+        overflow: hidden;
+
+        &.show {
+          animation: reveal 1.2s ease;
+          border-top: 2px dashed #6977bd;
+          border-bottom: 2px dashed #dcdcdc;
+          height: 230px;
+          z-index: 4;
+          position: absolute;
+          top: 25px;
+          width: 80%;
+          left: 10%;
+          right: 10%;
+          box-shadow: 0px 0px 4px 0px #545454;
+        }
+
+        .long-url {
+          padding: 20px;
+          background: #ddd;
+
+          .value {
+            overflow-wrap: break-word;
+            color: rgb(126, 126, 126);
+          }
+        }
+
+        .result {
+          min-height: 100px;
+          width: 100%;
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+          .copy-btn {
+            padding: 8px;
+            background: #ddd;
+            border-radius: 6px;
+            width: 80px;
+            margin-top: 10px;
+          }
+        }
       }
     }
   }
 
   @keyframes reveal {
-    from {
-      height: 0;
+    0% {
+      overflow: hidden;
+      transform: translateY(-110%);
     }
+
+    20% {
+      transform: translateY(-90%);
+    }
+
+    30% {
+      transform: translateY(-80%);
+    }
+
     40% {
-      height: 130px;
+      transform: translateY(-70%);
     }
+
+    60% {
+      transform: translateY(-60%);
+    }
+
     70% {
-      height: 140px;
+      transform: translateY(-40%);
     }
-    to {
-      height: 230px;
+
+    100% {
+      transform: translateY(0%);
     }
   }
 }
