--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,17 @@
 .App {
-  // background: #171717;
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  color: #ddd;
+  color: rgb(94, 94, 94);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .nav {
   height: 50px;
   padding: 15px;
-  background: transparent;
+  background: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -18,9 +20,64 @@
   img {
     height: 100%;
   }
+
+  p{
+    color: #000;
+    font-weight: bold;
+    font-size: 18px;
+  }
+  a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #ddd;
+    padding: 8px;
+    border-radius: 8px;
+    background: #1f4bb5;
+
+    img {
+      margin-right: 5px;
+      width: 20px;
+    }
+  }
+}
+
+.footer {
+  background: #fff;
+  border: 1px solid #ddd;
+  margin-top: 50px;
+  padding: 25px 25px 0 25px;
+  text-align: center;
+  .info {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    .one, .two, .three {
+      flex: 1;
+    }
+    .one {
+       text-align: left;
+    }
+  }
+  img.foot-img {
+    width: 60%;
+  }
+
+  @media screen and (max-width: 425px) {
+    img.foot-img {
+      width: 100%;
+    }
+    .info {
+      flex-direction: column;
+    }
+  }
 }
 
 .heading {
   color: red;
   margin-bottom: 12px;
 }
+
+
