--- a/src/components/body/style.scss
+++ b/src/components/body/style.scss
@@ -1,6 +1,13 @@
 .main {
   display: flex;
   width: 100%;
+  overflow: hidden;
+
+  .text-blue {
+    color:#1e4bb5;
+    font-weight: bold;
+    font-size: 18px;
+  }
 
   .left-container {
     width: 40%;
@@ -22,6 +29,23 @@
     .title {
       text-align: center;
       color: #000;
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    flex-direction: column;
+
+    .left-container {
+      width: 100%;
+
+      img {
+        margin-top: 30px;
+        height: 150px;
+        width: 150px;
+      }
+    }
+    .right-container {
+      width: 100%;
     }
   }
 }
