--- a/src/components/shorten/style.scss
+++ b/src/components/shorten/style.scss
@@ -152,6 +152,7 @@
         .long-url {
           padding: 20px;
           background: #ddd;
+          margin: 15px;
 
           .value {
             overflow-wrap: break-word;
