copy to clipboard

--- a/src/components/body/style.scss
+++ b/src/components/body/style.scss
@@ -16,6 +16,7 @@
     transition: .5s all linear;
 
     img {
+      object-fit: contain;
       transition: .5s all linear;
       margin-top: 60px;
       width: 100%;
