--- a/src/App.scss
+++ b/src/App.scss
@@ -97,11 +97,13 @@
     .col-1,
     .col-2,
     .col-3 {
-      margin-top: 10px;
+      margin-top: 20px;
     }
 
     .info {
       flex-direction: column-reverse;
+      width: 100%;
+      font-size: 14px;
     }
   }
 }
